# ScoreVis

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/scorevis/: __init__.py  data_loader.py  data_model_and_validate.py  data_models.py
tests/: conftest.py  test_data_model.py  test_property_data_loading.py
tests/fixtures/sample_visium_data/: README.md
