[project]
name = "webbomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.151.9",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "rich-click>=1.9.7",
    "scanpy>=1.12",
    "scipy>=1.17.1",
    "torch>=2.10.0",
]
